--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -530,12 +530,17 @@
 						<div>table-layout</div>
 					</div>
 				</li>
-
 				<li>
-					<a href="LinksAndLists.html">Links and Lists</a>
-					<p class="small_desc">Learn about Links and Lists</p>
+					<a href="Link.html">Links</a>
+					<p class="small_desc">Learn how to style a anchor element</p>
 					<div class="tags">
 						<div>Links</div>
+					</div>
+				</li>
+				<li>
+					<a href="List.html">Links and Lists</a>
+					<p class="small_desc">Learn about Links and Lists</p>
+					<div class="tags">
 						<div>list-style-type</div>
 						<div>list-style-image</div>
 						<div>list-style-position</div>
@@ -547,51 +552,55 @@
 		</div>
 	</div>
 
-	<div class="Card">
-		<h1>Properties - I</h1>
-		<div class="Content">
-			<a href="PropertiesOne.html">resize</a>
-			<a href="PropertiesOne.html">cursor</a>
-			<a href="PropertiesOne.html">pointer-events</a>
-			<a href="PropertiesOne.html">user-select</a>
-			<a href="PropertiesOne.html">tab-size</a>
-			<a href="PropertiesOne.html">calc()</a>
-			<a href="PropertiesOne.html">attr()</a>
-			<a href="PropertiesOne.html">object-fit</a>
-			<a href="PropertiesOne.html">object-position</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Media Query</h1>
-		<div class="Content">
-			<a href="MediaQuery.html">Media Query</a>
-			<a href="MediaQuery.html">Link <code>media</code> Attribute</a>
-			<a href="MediaQuery.html">Viewport</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Variables</h1>
-		<div class="Content">
-			<a href="Variables.html">var()</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Counters</h1>
-		<div class="Content">
-			<a href="Counters.html">Counter()</a>
-			<a href="Counters.html">counter-increment</a>
-			<a href="Counters.html">counter-reset</a>
-		</div>
-	</div>
-
-	
-
-	<div class="Skipping">
-		<div class="vertical-menu">
-			<a href="Skipping.html" class="active">Skipping</a>
+	<div class="card table_of_content">
+		<h1>Topics</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="PropertiesOne.html">Properties - I</a>
+					<p class="small_desc">Learn about Tables</p>
+					<div class="tags">
+						<a href="PropertiesOne.html">resize</a>
+						<a href="PropertiesOne.html">cursor</a>
+						<a href="PropertiesOne.html">pointer-events</a>
+						<a href="PropertiesOne.html">user-select</a>
+						<a href="PropertiesOne.html">tab-size</a>
+						<a href="PropertiesOne.html">calc()</a>
+						<a href="PropertiesOne.html">attr()</a>
+						<a href="PropertiesOne.html">object-fit</a>
+						<a href="PropertiesOne.html">object-position</a>
+					</div>
+				</li>
+				<li>
+					<a href="MediaQuery.html">Media Query</a>
+					<p class="small_desc">Learn about Tables</p>
+					<div class="tags">
+						<a href="MediaQuery.html">Media Query</a>
+						<a href="MediaQuery.html">Link <code>media</code> Attribute</a>
+						<a href="MediaQuery.html">Viewport</a>
+					</div>
+				</li>
+				<li>
+					<a href="Variables.html">Variables</a>
+					<p class="small_desc">Learn about Tables</p>
+					<div class="tags">
+						<div>var()</div>
+					</div>
+				</li>
+				<li>
+					<a href="Counters.html">Counters</a>
+					<p class="small_desc">Learn about Tables</p>
+					<div class="tags">
+						<a href="Counters.html">Counter()</a>
+						<a href="Counters.html">counter-increment</a>
+						<a href="Counters.html">counter-reset</a>
+					</div>
+				</li>
+				<li>
+					<a href="Skipping.html">Skipping</a>
+					<p class="small_desc">Learn about Tables</p>
+				</li>
+			</ol>
 		</div>
 	</div>
 	
