--- a/CSS/List.html
+++ b/CSS/List.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Links and Lists</title>
+	<title>Overflow</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-  <link rel="stylesheet" href="../Assets/prism-dark.css">
 </head>
-<body class="Body">
-<div class="Content Card">
+<body>
+<div class="page card">
 
 
-<h1>Links</h1>
-<p>To style a link differently depending on their state -</p>
-<ul>
-	<li>a:link - a normal, unvisited link</li>
-	<li>a:visited - a link the user has visited</li>
-	<li>a:hover - a link when the user mouses over it</li>
-	<li>a:active - a link the moment it is clicked</li>
-</ul>
-<p>When setting the style for several link states, there are some order rules:</p>
-<ul>
-	<li>a:hover MUST come after a:link and a:visited.</li>
-	<li>a:active MUST come after a:hover.</li>
-</ul>
-<p>By default browser render links with an underline below the text. If you want to remove that underline use <code>text-decoration</code> property with the value <code>none</code></p>
-
+<h1>Styling List</h1>
+<p>With CSS we can customize the style of the list in different ways. Here are few common properties that can be applied on both ordered list (<code>ol</code>) or unordered list (<code>ul</code>):</p>
+<ol>
+  <li>list-style-type</li>
+  <li>list-style-image</li>
+  <li>list-style-position</li>
+  <li>list-style</li>
+</ol>
 
 
 <h1>list-style-type</h1>
-<p>The list-style-type specifies the type of list-item marker in a list.</p>
-<p>You can use the following values -</p>
+<p>The <code>list-style-type</code> specifies the type of list-item marker in a list.</p>
+<p>You can use the following values:</p>
 <table class="table is-bordered is-fullwidth">
   <tr>
 	  <th style="width:24%">Value</th>
@@ -126,8 +116,8 @@
     <td>The marker is upper-roman (I, II, III, IV, V, etc.)</td>
   </tr>
 </table>
-<p>Note that not all the broswer supports all the list-style-type value above. If a browser doesn't support a value it will render as a <code>disc</code> by default.</p>
-<p>Here is an example -</p>
+<p class="tip">Note that not all the broswer supports all the list-style-type value above. If a browser doesn't support a value it will render as a <code>disc</code> by default.</p>
+<p>Here is an example:</p>
 <pre>
 &lt;div class="box">
   &lt;ul style="list-style-type: upper-roman;">
@@ -140,7 +130,7 @@
   &lt;/ul>
 &lt;/div>
 </pre>
-<div class="box">
+<div class="SnippetDemo">
   <ul style="list-style-type: upper-roman;">
     <li>Mango</li>
     <li>Strawberry</li>
@@ -150,23 +140,18 @@
     <li>Date</li>
   </ul>
 </div>
-<p>Try inspecting that ul and change the value differently and see the each effect.</p>
+<p class="tip">Try inspecting that <code>ul</code> element in browser debugging tool and change the value differently and see the each effect.</p>
 
 
 
 <h1>list-style-image</h1>
-<p>The list-style-image property replaces the list-item marker with an image.</p>
-<p>It can take two values -</p>
-<ul>
-  <li><code>none</code> which means no image will be used as a list marker. No image will be displayed. Instead, the list-style-type property will define what type of list marker will be rendered. This is default.</li>
+<p>The <code>list-style-image</code> property replaces the list-item marker with an image.</p>
+<p>It can take two values:</p>
+<ol>
+  <li><code>none</code> which means no image will be used as a list marker. No image will be displayed. Instead, the <code>list-style-type</code> property will define what type of list marker will be rendered. This is default.</li>
   <li><code>url</code> which is used to provide the url of the image that will be used as the image.</li>
-</ul>
-<p>If the image is not found, the default value <code>disc</code> will be used. Here is an example -</p>
-<style type="text/css">
-.ulImage{
-    list-style-image: url('Assets/img/sqpurple.gif');
-}
-</style>
+</ol>
+<p>If the image is not found, the default value <code>disc</code> will be used. Here is an example:</p>
 <pre>
 .ulImage{
     list-style-image: url('Assets/img/sqpurple.gif');
@@ -183,7 +168,12 @@
   &lt;/ul>
 &lt;/div>
 </pre>
-<div class="box">
+<div class="SnippetDemo">
+  <style type="text/css">
+    .ulImage{
+        list-style-image: url('Assets/img/sqpurple.gif');
+    }
+  </style>
   <ul class="ulImage">
     <li>Mango</li>
     <li>Strawberry</li>
@@ -201,26 +191,12 @@
 
 
 <h1>list-style-position</h1>
-<p>The list-style-position property specifies the position of the list-item markers (bullet points). It can take the following values -</p>
-<ul>
+<p>The <code>list-style-position</code> property specifies the position of the list-item markers (bullet points). It can take the following values:</p>
+<ol>
   <li><code>inside</code> The bullet points will be inside the list item</li>
   <li><code>outside</code> The bullet points will be outside the list item. This is default.</li>
-</ul>
-<p>Here is an example -</p>
-<style type="text/css">
-.insideUl{
-  list-style-position: inside;
-}
-.insideUl li{
-  border: 1px solid black;
-}
-.outsideUl{
-  list-style-position: outside;
-}
-.outsideUl li{
-  border: 1px solid black;
-}
-</style>
+</ol>
+<p>Here is an example:</p>
 <pre>
 .insideUl{
   list-style-position: inside;
@@ -238,44 +214,62 @@
 
 &lt;div class="box">
   &lt;h3>Inside&lt;/h3>
-  &lt;ul class="insideUl">
+  &lt;ol class="insideUl">
     &lt;li>Mango&lt;/li>
     &lt;li>Strawberry&lt;/li>
     &lt;li>Banana&lt;/li>
     &lt;li>Apple&lt;/li>
     &lt;li>Guava&lt;/li>
     &lt;li>Date&lt;/li>
-  &lt;/ul>
+  &lt;/ol>
   &lt;h3>Outside&lt;/h3>
-  &lt;ul class="outsideUl">
+  &lt;ol class="outsideUl">
     &lt;li>Mango&lt;/li>
     &lt;li>Strawberry&lt;/li>
     &lt;li>Banana&lt;/li>
     &lt;li>Apple&lt;/li>
     &lt;li>Guava&lt;/li>
     &lt;li>Date&lt;/li>
-  &lt;/ul>
+  &lt;/ol>
 &lt;/div>
 </pre>
-<div class="box">
-  <h3>Inside</h3>
-  <ul class="insideUl">
-    <li>Mango</li>
-    <li>Strawberry</li>
-    <li>Banana</li>
-    <li>Apple</li>
-    <li>Guava</li>
-    <li>Date</li>
-  </ul>
-  <h3>Outside</h3>
-  <ul class="outsideUl">
-    <li>Mango</li>
-    <li>Strawberry</li>
-    <li>Banana</li>
-    <li>Apple</li>
-    <li>Guava</li>
-    <li>Date</li>
-  </ul>
+<div class="SnippetDemo">
+  <style type="text/css">
+    .insideUl{
+      list-style-position: inside;
+    }
+    .insideUl li{
+      border: 1px solid black;
+    }
+    .outsideUl{
+      list-style-position: outside;
+    }
+    .outsideUl li{
+      border: 1px solid black;
+    }
+  </style>
+  <div class="is-flex is-flex-direction-column is-align-content-center mr-4">
+    <h3 class="has-text-centered">Inside</h3>
+    <ol class="insideUl" style="padding-left: 0;">
+      <li>Mango</li>
+      <li>Strawberry</li>
+      <li>Banana</li>
+      <li>Apple</li>
+      <li>Guava</li>
+      <li>Date</li>
+    </ol>
+  </div>
+  <div class="is-flex is-flex-direction-column is-align-content-center ml-4">
+    <h3 class="has-text-centered">Outside</h3>
+    <ol class="outsideUl" style="padding-left: 0;">
+      <li>Mango</li>
+      <li>Strawberry</li>
+      <li>Banana</li>
+      <li>Apple</li>
+      <li>Guava</li>
+      <li>Date</li>
+    </ol>
+  </div>
 </div>
 
 
@@ -283,30 +277,36 @@
 
 
 <h1>list-style</h1>
-<p>The list-style property is a shorthand property that sets values for three different list-related properties in one declaration:</p>
+<p>The <code>list-style</code> property is a shorthand property that sets values for three different list-related properties in one declaration:</p>
 <pre>
 ul {
     list-style: &lt;list-style-type> || &lt;list-style-position> || &lt;list-style-image>;
 }
-
-ul {
-    list-style: square outside none;
-}
 </pre>
-<p>Which would be the same as the following longhand version:</p>
+<p>In the following example, the first one is shorthand property and last one is equivalent longhand version:</p>
 <pre>
 ul {
- list-style-type: square;
- list-style-position: outside;
- list-style-image: none;
+  list-style: square outside none;
+}
+
+ul {
+  list-style-type: square;
+  list-style-position: outside;
+  list-style-image: none;
 }
 </pre>
 <p>In the shorthand, if any values are omitted, they will revert to their initial state.</p>
 
 
 
+
+
+
+
+
+
 <h1>Remove Default Settings</h1>
-<p>The <code>list-style-type:none</code> property can also be used to remove the markers/bullets. Note that the list also has default margin and padding. To remove this, add margin:0 and padding:0 to &lt;ul> or &lt;ol>:</p>
+<p>The <code>list-style-type:none;</code> property can also be used to remove the markers/bullets. Note that the list also has default margin and padding. To remove this, add <code>margin:0</code> and <code>padding:0</code> to <code>&lt;ul></code> or <code>&lt;ol></code>:</p>
 <pre>
 ul {
     list-style-type: none;
