--- a/CSS/Colors.html
+++ b/CSS/Colors.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Colors & Opacity</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
