--- a/CSS/Examples/targetExample.html
+++ b/CSS/Examples/targetExample.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>:target</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../../Assets/Style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
