--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>CSS Tutorial</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
+	    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
