--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Neorial</title>
 	<link rel="stylesheet" type="text/css" href="Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="Assets/Style.css">
+	<link rel="icon" type="image/x-icon" href="Assets/favicon.png">
 </head>
 <body class="Body">
 <div class="Content Card">
