--- a/CSS/Gradient.html
+++ b/CSS/Gradient.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Gradient</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
 <body>
 <div class="page card">
-
 
 
   
