--- a/Flutter/TOC.html
+++ b/Flutter/TOC.html
@@ -28,6 +28,77 @@
 </head>
 <body class="Body">
 
+	
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>CSS Tutorial</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
+	    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
+	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
+	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
+</head>
+<body class="Body">
+	<div class="card table_of_content">
+		<h1>Layouts</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Layouts/TOC.html">Layouts</a>
+					<p class="small_desc">Learn Layouts</p>
+					<div class="tags">
+						<div>Layouts</div>
+					</div>
+				</li>
+				<li>
+					<a href="Layouts/BoxConstraints.html">Box Constraints</a>
+					<p class="small_desc">Box Constraints in Flutter</p>
+					<div class="tags">
+						<div>Constraints</div>
+						<div>Tight vs. loose constraints</div>
+						<div>Unbounded Vs Bounded Constraints</div>
+						<div><a href="Layouts/ConstrainedBox.html">BoxConstraints</a></div>
+						<div><a href="Layouts/ConstrainedBox.html">ConstrainedBox</a></div>
+					</div>
+				</li>
+				<li>
+					<a>Basic Layouts</a>
+					<p class="small_desc">Basic layout widgets of flutter</p>
+					<div class="tags">
+						<div><a href="Layouts/ContainerWidget.html">Container Widget</a></div>
+						<div><a href="Layouts/PaddingWidget.html">Padding Widget</a></div>
+						<div><a href="Layouts/PaddingWidget.html">EdgeInsets</a></div>
+						<div><a href="Layouts/SizedBoxWidget.html">SizedBox Widget</a></div>
+						<div><a href="Layouts/DividerWidget.html">Divider Widget</a></div>
+					</div>
+				</li>
+				<li>
+					<a href="Layouts/Alignment.html">Alignment</a>
+					<p class="small_desc">Alignment</p>
+					<div class="tags">
+						<div>Alignment Concept</div>
+						<div>Align Widget</div>
+						<div>Center Widget</div>
+					</div>
+				</li>
+				<li>
+					<a href="Layouts/Icons.html">Icons</a>
+					<p class="small_desc">Work with Icons</p>
+					<div class="tags">
+						<div>Icons</div>
+						<div>Icon Widget</div>
+						<div>IconButton</div>
+						<div>Icon Background with Ink Widget</div>
+					</div>
+				</li>
+			</ol>
+		</div>
+	</div>
+
 	<div class="Card">
 		<h1>Basics in Flutter</h1>
 		<div class="Content">
@@ -35,13 +106,6 @@
 			<a href="Basics/TOC.html">Stateful Widget</a>
 			<a href="Basics/TOC.html">Stateless Widget</a>
 			<a href="Basics/ConnectMobileDeviceThroughWifi.html">Connect Mobile Device Through Wifi</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Layouts</h1>
-		<div class="Content">
-			<a href="Layouts/TOC.html">Layouts</a>
 		</div>
 	</div>
 
@@ -119,5 +183,7 @@
 		</div>
 	</div>
 
+	
+	
 </body>
 </html>
