--- a/Flutter/TOC.html
+++ b/Flutter/TOC.html
@@ -77,6 +77,16 @@
 					</div>
 				</li>
 				<li>
+					<a>Complex Layouts</a>
+					<p class="small_desc">Learn few advance widgets.</p>
+					<div class="tags">
+						<div><a href="Layouts/RowWidget.html">Row Widget</a></div>
+						<div><a href="Layouts/ColumnWidget.html">Column Widget</a></div>
+						<div><a href="Layouts/BoxFit.html">BoxFit Widget</a></div>
+						<div><a href="Layouts/BoxFit.html">FittedBox Widget</a></div>
+					</div>
+				</li>
+				<li>
 					<a href="Layouts/Alignment.html">Alignment</a>
 					<p class="small_desc">Alignment</p>
 					<div class="tags">
