--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -286,25 +286,11 @@
 					<a href="Display.html">Display</a>
 					<p class="small_desc">In this section we will learn how we can handle different behaviour of CSS when it comes to displaying an element.</p>
 					<div class="tags">
-						<div>inline</div>
-						<div>inline-block</div>
-						<div>inset</div>
-						<div>One Side Shadow</div>
-						<div>Unwanted White-Space</div>
-						<div>line-height | font-size</div>
-						<div>block</div>
-						<div>none</div>
-						<div>table</div>
-						<div>table-cell</div>
-						<div>table-column</div>
-						<div>table-colgroup</div>
-						<div>table-header-group</div>
-						<div>table-row-group</div>
-						<div>table-footer-group</div>
-						<div>table-row</div>
-						<div>table-caption</div>
-						<div>flex</div>
-						<div>grid</div>
+						<div>display: inline;</div>
+						<div>display: inline-block;</div>
+						<div>display: block;</div>
+						<div>display: none;</div>
+						<div>display: table;</div>
 					</div>
 				</li>
 				<li>
