--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -309,7 +309,7 @@
 						<div>flex-flow</div>
 						<div>align-self</div>
 						<div>order</div>
-						<div>align-content</div>
+						<div>Flexbox Helper Class</div>
 					</div>
 				</li>
 				<li>
