--- a/CSS/Colors.html
+++ b/CSS/Colors.html
@@ -126,7 +126,7 @@
 	&lt;p style="opacity: 1;">This is a text&lt;/p>
 &lt;/div>
 </pre>
-<div style="display: flex; justify-content: center; align-items: center; height: 100px;">
+<div class="SnippetDemo">
 	<div style="opacity: .1; background-color: red;">
 		<p style="opacity: 1;">This is a text</p>
 	</div>
@@ -139,7 +139,7 @@
 	&lt;p style="opacity: .5;">This is a text&lt;/p>
 &lt;/div>
 </pre>
-<div style="display: flex; justify-content: center; align-items: center; height: 100px;">
+<div class="SnippetDemo">
 	<div style="opacity: .8; background-color: red;">
 		<p style="opacity: .5;">This is a text</p>
 	</div>
