--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
 <body class="Body">
-
 	<div class="card table_of_content">
 		<h1>Basics</h1>
 		<div>
@@ -278,7 +277,7 @@
 		</div>
 	</div>
 
-	<div class="card table_of_content">
+	<div class="card table_of_content not_completed">
 		<h1>Display & Position</h1>
 		<div>
 			<ol>
@@ -385,7 +384,7 @@
 		</div>
 	</div>
 
-	<div class="card table_of_content">
+	<div class="card table_of_content not_completed">
 		<h1>Pseudo Class & Element</h1>
 		<div>
 			<ol>
@@ -440,7 +439,7 @@
 		</div>
 	</div>
 
-	<div class="card table_of_content">
+	<div class="card table_of_content not_completed">
 		<h1>Animations</h1>
 		<div>
 			<ol>
@@ -493,7 +492,7 @@
 		</div>
 	</div>
 
-	<div class="card table_of_content">
+	<div class="card table_of_content not_completed">
 		<h1>Styling Elements</h1>
 		<div>
 			<ol>
@@ -540,7 +539,7 @@
 		</div>
 	</div>
 
-	<div class="card table_of_content">
+	<div class="card table_of_content not_completed">
 		<h1>Topics</h1>
 		<div>
 			<ol>
@@ -591,6 +590,5 @@
 			</ol>
 		</div>
 	</div>
-	
 </body>
 </html>
