--- a/index.html
+++ b/index.html
@@ -2,13 +2,42 @@
 <html>
 <head>
 	<title>Neorial</title>
+    <link rel="icon" type="image/x-icon" href="Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="Assets/Style.css">
-	<link rel="icon" type="image/x-icon" href="Assets/favicon.png">
 </head>
-<body class="Body">
-<div class="Content Card">
-<h1>In Progress</h1>
+<body>
+<div class="page card">
+
+	<div class="card table_of_content">
+		<h1>Front-End Engineering</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="css/TOC.html">CSS - Cascading Style Sheet</a>
+					<p class="small_desc">Web Frontend!</p>
+				</li>
+			</ol>
+		</div>
+	</div>
+	<div class="card table_of_content">
+		<h1>Database Programming</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="MySQL/TOC.html">MySQL</a>
+					<p class="small_desc">Relational Database</p>
+				</li>
+				<li>
+					<a href="MongoDB/TOC.html">MongoDB</a>
+					<p class="small_desc">Relational Database</p>
+				</li>
+			</ol>
+		</div>
+	</div>
+
+	<div style="width: 100%; height: 100vh;"></div>
+
 	<a href="Cudos/TOC.html">Cudos</a><br>
 	<a href="Blockchain/TOC.html">Blockchain</a><br>
 	<a href="Zilliqa/TOC.html">Zilliqa</a><br>
@@ -16,8 +45,6 @@
 	<a href="Flutter/TOC.html">Flutter</a><br>
 	<a href="Node.js/TOC.html">Node.js</a><br>
 	<a href="Express/TOC.html">Express</a><br>
-	<a href="MongoDB/TOC.html">MongoDB</a><br>
-	<a href="MySQL/TOC.html">MySQL</a><br>
 	<a href="Go/TOC.html">Go</a><br>
 	<a href="Solana/TOC.html">Solana</a><br>
 	
@@ -64,6 +91,8 @@
 
 	<h3 style="margin-bottom: 0;"><a href="MJML/TOC.html">MJML Tutorial</a></h3>
 	<p style="margin-top: 0;">Creating Email and also make it responsive accross the device is always a painful task. It's not regular HTML and CSS that you write everyday to create a website. Though most of the Email clients are improving their engine to bring the latest HTML and CSS feature into it. But there are still many Client that doesn't support latest HTML and CSS. And to my surprise Gmail doesn't support latest HTML and CSS. So keeping in mind all the major Email client, writting Email is seriously a painful task. But MJML simplifies most of the thing. Creating Email with MJML is easy but still is not a suitable for Gmail client. MJML generates Media Query CSS and puts it within the Style tag, but Gmail removes any style tag before rendering it. So using MJML for Gmail is not suitable. After learning it for two days what I have observed, it was wasting of time. MJML is actually sets of Components and it has few rules of how to use these components. MJML generates pure HTML based on the MJML code. In my opinion, we should follow the guidelines of how to create Email using pure CSS and HTML rather than using MJML. Besides, with MJML you cannot have a complex layout. Only very basic layouts can be done greatly and still it is not Gmail supported. MJML uses <code>table</code> element to build the layout. And they nest the table within the table as deepest as they could. So what if you could learn how they are doing it in the actual HTML and CSS and achieving the responsiveness and layout and all. If you can learn it you can get rid of external library and also you can have more deep learning skill about Email. It will also give you actual experience of Email layout in different Client.</p>
+
+
 </div>
 </body>
 </html>
