--- a/MySQL/TOC.html
+++ b/MySQL/TOC.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vue - Table of Content</title>
+	<title>CSS Tutorial</title>
+    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
+	    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
-	<script type="text/javascript" src="../Assets/jquery.min.js"></script>
-	<link rel="stylesheet" href="../Assets/prism-dark.css">
-	<style type="text/css">
-			.Content{
-					display: flex;
-					flex-flow: row wrap;
-			}
-			.Content a{
-					margin: 5px;
-					padding: 5px;
-					border: 1px solid #ccc;
-			}
-			.Content{
-					padding: 0 !important;
-			}
-			h1{
-					font-size: 16px;
-					margin: 0;
-			}
-	</style>
 </head>
 <body class="Body">
-
-		<div class="Card">
-			<h1>Installing MySQL Server on Linux</h1>
-			<div class="Content">
-				<a href="Install.html">Installing</a>
-			</div>
+	<div class="card table_of_content">
+		<h1>Introduction</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Introduction.html">Introduction</a>
+					<p class="small_desc">Lets explore the CSS doc. The first step of learning CSS. Basic knowledge to get started with CSS.</p>
+					<div class="tags">
+						<div>Basic syntax for writting CSS Code</div>
+						<div>How to write Comment in CSS Code</div>
+						<div>Inclusion : Different ways of using CSS</div>
+					</div>
+				</li>
+			</ol>
 		</div>
-	
+	</div>
 </body>
 </html>
