--- a/MySQL/TOC.html
+++ b/MySQL/TOC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSS Tutorial</title>
+	<title>MySQL - Table of Content</title>
     <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
@@ -14,11 +14,16 @@
 			<ol>
 				<li>
 					<a href="Introduction.html">Introduction</a>
-					<p class="small_desc">Lets explore the CSS doc. The first step of learning CSS. Basic knowledge to get started with CSS.</p>
+					<p class="small_desc">MySQL Introduction</p>
 					<div class="tags">
-						<div>Basic syntax for writting CSS Code</div>
-						<div>How to write Comment in CSS Code</div>
-						<div>Inclusion : Different ways of using CSS</div>
+						<div>MySQL Introduction</div>
+					</div>
+				</li>
+				<li>
+					<a href="QueringData.html">Quering Data</a>
+					<p class="small_desc">MySQL Quering Data</p>
+					<div class="tags">
+						<div>MySQL Quering Data</div>
 					</div>
 				</li>
 			</ol>
