--- a/MySQL/QueringData.html
+++ b/MySQL/QueringData.html
@@ -44,6 +44,10 @@
                 <a href="QueryData/And.html">AND Operator</a>
                 <p class="small_desc">Learn how you can combine two condition using the AND operator and where you can use them.</p>
             </li>
+            <li>
+                <a href="QueryData/Or.html">OR Operator</a>
+                <p class="small_desc">Learn how you can combine two condition using the OR operator and where you can use them.</p>
+            </li>
         </ol>
     </div>
 </div>
