--- a/MySQL/QueringData.html
+++ b/MySQL/QueringData.html
@@ -48,6 +48,14 @@
                 <a href="QueryData/Or.html">OR Operator</a>
                 <p class="small_desc">Learn how you can combine two condition using the OR operator and where you can use them.</p>
             </li>
+            <li>
+                <a href="QueryData/In.html">IN Operator</a>
+                <p class="small_desc">Learn how you can use IN operator in WHERE clause to check if a value exists in an array.</p>
+            </li>
+            <li>
+                <a href="QueryData/In.html">NOT IN Operator</a>
+                <p class="small_desc">Learn how you can use NOT IN operator in WHERE clause to check if a value doesn't exists in an array.</p>
+            </li>
         </ol>
     </div>
 </div>
