--- a/MySQL/TOC.html
+++ b/MySQL/TOC.html
@@ -9,22 +9,23 @@
 </head>
 <body class="Body">
 	<div class="card table_of_content">
-		<h1>Introduction</h1>
+		<h1>MySQL - Table of Content</h1>
 		<div>
 			<ol>
 				<li>
-					<a href="Introduction.html">Introduction</a>
-					<p class="small_desc">MySQL Introduction</p>
-					<div class="tags">
-						<div>MySQL Introduction</div>
-					</div>
+					<a href="Introduction.html">Introduction to MySQL</a>
+					<ul class="chapter_items">
+						<li>What is a database? What is SQL and MySQL?</li>
+						<li>Installing MySQL server software and connect to the server from command line.</li>
+						<li>How to load an existing database using the <code>source</code> command.</li>
+						<li>What is <code>SHOW DATABASES;</code> command used for?</li>
+						<li>How do you terminate a statement in MySQL?</li>
+						<li>"MySQL is case-insensitive" - What do you mean by that?</li>
+					</ul>
 				</li>
 				<li>
-					<a href="QueringData.html">Quering Data</a>
-					<p class="small_desc">MySQL Quering Data</p>
-					<div class="tags">
-						<div>MySQL Quering Data</div>
-					</div>
+					<a href="MySQLBasics.html">MySQL Basics</a>
+					<p class="small_desc">Basic concepts of SQL programming language and how you can use them in MySQL software. Like selecting data from the database with some condition and how to sort them or group them and many more.</p>
 				</li>
 			</ol>
 		</div>
