--- a/MySQL/MySQLBasics/Select.html
+++ b/MySQL/MySQLBasics/Select.html
@@ -13,35 +13,21 @@
 <h1>SELECT FROM</h1>
 <p>The <code>SELECT</code> statement allows you to select data from one or more tables. To write a <code>SELECT</code> statement in MySQL, you use this syntax:</p>
 <pre>
-SELECT select_list
-FROM table_name;
+SELECT select_list FROM table_name;
 </pre>
 <p>In this syntax:</p>
 <ol>
-    <li>First, specify one or more columns from which you want to select data after the <code>SELECT</code> keyword. If the <code>select_list</code> has multiple columns, you need to separate them by a comma (<code>,</code>).</li>
+    <li>First, specify one or more columns from which you want to select data after the <code>SELECT</code> keyword. If the <code>select_list</code> has multiple columns, you need to separate these columns by a comma (<code>,</code>).</li>
     <li>Second, specify the name of the table from which you want to select data after the <code>FROM</code> keyword.</li>
     <li>The semicolon (;) is optional, which denotes the end of a statement.</li>
 </ol>
-<p>When executing the <code>SELECT</code> statement, MySQL evaluates the <code>FROM</code> clause before the <code>SELECT</code> clause.</p>
-
-<h3>Semicolon</h3>
-<p>In MySQL, each statement is seperated by semicolon. Hence it is always a good practice to end a statement with a semicolon. If you have only one statement, then semicolon is optional. But if you have two or more statements, you need to use the semicolon(<code>;</code>) to separate them so that MySQL will execute each statement individually.</p>
-
-<h3>MySQL is case insensitive</h3>
-<p>The <code>SELECT</code> and <code>FROM</code> are the keywords. By convention, you write the SQL keywords in uppercase. However, it's not mandatory. Because SQL is case-insensitive, you can write the SQL statement in lowercase, uppercase, etc. For example:</p>
-<pre>
-select select_list
-from table_name;
-</pre>
-<p>is a valid statement.</p>
 
 <h3>Order of Execution</h3>
 <p>When executing the <code>SELECT</code> statement, MySQL evaluates the <code>FROM</code> clause before the <code>SELECT</code> clause.</p>
 
 <h3>Example : Select Single Column</h3>
 <pre>
-SELECT lastName
-FROM employees;
+SELECT lastName FROM employees;
 </pre>
 <p>The above statement will show a single column which contains list of last name from table <code>employees</code>.</p>
 
@@ -174,7 +160,15 @@ SELECT CONCAT('Jane',' ','Doe') AS 'Full name';
 +-----------+
 1 row in set (0.00 sec)
 </pre>
-
+<p>Here is another example of using column alias:</p>
+<pre>
+SELECT 
+    firstName "First Name",
+    lastName "Last Name", 
+    jobTitle "Job Title"
+FROM
+    employees;
+</pre>
 
     
 
